# dolphin-disc-drive

./: .rcconfig  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/: __init__.py  __main__.py
src/definitions/: __init__.py  abstract_file.py  abstract_file_archive.py  constants.py  fst.py  stream.py  transform.py
src/definitions/files/: __init__.py  extracted_file.py  serializable_file.py  stream.py  stream_reader.py
src/definitions/files/common/: __init__.py  iso.py  rel.py
src/definitions/files/system/: __init__.py  app_loader.py  disc_header.py  disc_header_information.py  dol.py  fst.py  toc.py
src/definitions/gamecube/: __init__.py  disc_header.py  iso.py  rel.py  toc.py
src/definitions/services/: __init__.py  compress.py  encrypt.py
src/definitions/unicode/: __init__.py  unicode_string.py
src/gamecube/: __init__.py  app_loader.py  disc_header_information.py  dol.py  fst.py  iso.py  toc.py
src/patch/: __init__.py
src/services/: __init__.py  image_reader.py
src/services/compression/: __init__.py
src/services/encryption/: __init__.py
src/services/factories/: __init__.py
src/services/streams/: __init__.py
src/services/streams/iso/: __init__.py  builder.py  reader.py
src/unicode/: __init__.py  unicode_string.py
tests/: __init__.py  __main__.py  constants.py  dol_test.py  stream_test.py
